# whale_email

./: CMakeLists.txt  README.md  banner.txt  defines.hpp  main.cpp  smtp.cpp  smtp.hpp  smtp_client.cpp  whale_email.cpp  whale_email.hpp
include/: defines.hpp  smtp_client.hpp
src/: main.cpp  smtp_client.cpp  whale_email.cpp
